// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cjk.md 1`] = `
這是一段很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長的段落

全　　形　空白全　　形　空白全　　形　空白全　　形　空白全　　形　空白全　　形　空白全　　形　空白

空白全形空白全形空白全形空白　空白全形空白全形空白全形空白　空白全形空白全形空白全形空白　空白全形空白全形空白全形空白
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
這是一段很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長
很長的段落

全　　形　空白全　　形　空白全　　形　空白全　　形　空白全　　形　空白
全　　形　空白全　　形　空白

空白全形空白全形空白全形空白　空白全形空白全形空白全形空白　空白全形空白全形空白
全形空白　空白全形空白全形空白全形空白

`;

exports[`link.md 1`] = `
[這是一段很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長的段落][]
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[這是一段很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長的段落][]

`;

exports[`mixed.md 1`] = `
這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段
Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著
中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個
English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段
Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著
中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個
English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段
Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著
中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個
English 混合著中文的一段 Paragraph！

`;

exports[`space.md 1`] = `
這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段
Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著
中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個
English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段
Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著
中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個
English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段
Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著
中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個
English 混合著中文的一段 Paragraph！

`;
